# udemy-django-practical-guide

./: README.md  pyproject.toml
monthly_challenges/challenges/: tests.py  views.py
monthly_challenges/monthly_challenges/: settings.py  urls.py
section03/: manage.py
section03/challenges/: tests.py  urls.py
section03/section03/: asgi.py  settings.py  urls.py  wsgi.py
section04/: manage.py
section04/challenges/: tests.py  views.py
section04/challenges/templates/challenges/: challenge.html  index.html
section04/section04/: asgi.py  settings.py  urls.py  wsgi.py
section04/templates/: 404.html  base.html
section05/: manage.py
section05/blog/: views.py
section05/blog/templates/blog/: index.html
section05/section05/: asgi.py  settings.py  urls.py  wsgi.py
section06/: manage.py
section06/bookstore/: models.py
section06/bookstore/migrations/: 0002_book_author_book_is_bestselling_alter_book_rating.py
section06/bookstore/templates/bookstore/: index.html
section06/section06/: asgi.py  settings.py  urls.py  wsgi.py
section07/: manage.py
section07/bookstore/: admin.py  views.py
section07/bookstore/migrations/: 0003_book_slug.py
section07/bookstore/templates/bookstore/: book_detail.html
section07/section07/: asgi.py  settings.py  urls.py  wsgi.py
section08/: manage.py
section08/bookstore/: admin.py  models.py  urls.py
section08/bookstore/migrations/: 0001_initial.py  0004_author_alter_book_author.py  0005_address_alter_book_author_author_address.py
section08/section08/: asgi.py  settings.py  urls.py  wsgi.py
